# appeals-decision-assistant

./: .gitignore  package-lock.json  package.json  pyproject.toml
.github/: dependabot.yml
ada/: README.md  comment_helper.py  main.py  utility.py
ada/agents/: spelling-reviewer.yml  structure-reviewer.yml
ada/tests/: test_universal_mapping.py  verify_mapping.py
documents/: coding-standards.md  python-coding-standards.md
evaluate/: dataset.py  dataset.yml  evaluators.py  feedback_experiment.py  main.py  run_evaluation.py
evaluate/tools/: __init__.py  feedbackledger.py
infrastructure/: README.md  ai-foundry.tf  locals.tf  main.tf  networking.tf  providers.tf  regions.tf  variables.tf
infrastructure/environments/: dev.tfvars  prod.tfvars  test.tfvars  training.tfvars
infrastructure/pipelines/: terraform-cd.yaml  terraform-ci-commit.yaml
sample/: README.md  weather.py
