[project]
name = "appeals-decision-assistant"
version = "0.1.0"
description = "Appeals Decision Assistant"
requires-python = "==3.13.*"
license = { file = "LICENSE" }
dependencies = [
    "deepagents>=0.2.8",
    "langchain-community>=0.4.1",
    "langchain-text-splitters>=0.3.0",
    "langchain[openai]>=1.1.0",
    "openevals>=0.1.2",
    "pymupdf>=1.24.0",
    "tiktoken>=0.7.0",
    "unstructured>=0.18.21",
]

[tool.uv]
managed = true

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # standard python errors (pycodestyle)
    "W",   # standard python warnings (pycodestyle)
    "F",   # standard logic errors (pyflakes)
    "I",   # import sorting
    "PL",  # pylint
    "R",   # refactoring
    "UP",  # pyupgrade
    "B",   # flake8 bugbear
    "BLE", # bare exceptions
    "C",   # complexity
    "DTZ", # datetime errors
    "G",   # logging format
    "N",   # conform to PEP8 naming rules
    "RET", # return values
]

ignore = [
    "E501",    # line-too-long (Ruff formatter handles this, linter ignores it)
    "PLW2901", # for loop variable overwritten by assignment target
]

dummy-variable-rgx = "_+|unused|.*_unused"

[tool.ruff.format]
# Black style
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
strict = false
disable_error_code = ["var-annotated"]

[dependency-groups]
dev = [
    "lxml-stubs>=0.5.1",
    "mypy>=1.19.0",
    "pandas-stubs>=2.3.3.251201",
    "types-defusedxml>=0.7.0.20250822",
    "types-psutil>=7.1.3.20251202",
    "types-pygments>=2.19.0.20251121",
    "types-pytz>=2025.2.0.20251108",
    "types-pyyaml>=6.0.12.20250915",
    "types-regex>=2025.11.3.20251106",
    "types-requests>=2.32.4.20250913",
    "types-tqdm>=4.67.0.20250809",
]
